--- a/less1/index.html
+++ b/less1/index.html
@@ -178,7 +178,7 @@
                                 <textarea name="more" cols="30" rows="10" placeholder="Дополнителньые комментарии к заказу"></textarea>
                             </label>
                             <label>
-                                <input class="payment__basic visually-hidden" type="checkbox" name="privateInformation">
+                                <input class="payment__basic visually-hidden" type="checkbox" name="privateInformation" required>
                                 <span class="payment__checkbox">Согласие на обработку личных данных</span>
                             </label>
                             <button class="form__submit" type="submit">Перейти к оплате</button>
