--- a/less1-2/catalog.html
+++ b/less1-2/catalog.html
@@ -15,9 +15,79 @@
    <header></header>
 
    <main>
-        <div class="container">
-            <div class="h1 line">Список полезных материалов</div>
-            <div class="row">
+      <div class="container">
+        <div class="h1 line">Список полезных материалов</div>
+        <div class="row">
+          <div class="card col-xl-4 col-md-6 col-12 ">
+              <img src="./img/oil.jpg" class="card-img-top" alt="oil">
+              <div class="card-body pl-pr-0">
+              <h5 class="card-title">Как вы используете эфирные масла?</h5>
+              <p class="card-text">Чтобы знать, как эффективно использовать эфирные масла, не требуется химическая степень или серьезное обучение. Имея базовое представление о мерах предосторожности и методах применения, можно легко начать использовать эфирные масла.</p>
+              <a href="#" class="btn card-btn">Читать дальше</a>
+              </div>
+          </div>
+          <div class="card col-xl-4 col-md-6 col-12">
+              <img src="img/child.svg" class="card-img-top" alt="oil">
+              <div class="card-body pl-pr-0">
+              <h5 class="card-title">Начните с эфирных масел</h5>
+              <p class="card-text">Чтобы знать, как эффективно использовать эфирные масла, не требуется химическая степень или серьезное обучение. Имея базовое представление о мерах предосторожности и методах применения, можно легко начать использовать эфирные масла.</p>
+              <a href="#" class="btn card-btn">Читать дальше</a>
+              </div>
+          </div>
+          <div class="card col-xl-4 col-md-6 col-12">
+              <img src="./img/сup.jpg" class="card-img-top" alt="child">
+              <div class="card-body pl-pr-0">
+              <h5 class="card-title">Как вы используете эфирные масла?</h5>
+              <p class="card-text">Чтобы знать, как эффективно использовать эфирные масла, не требуется химическая степень или серьезное обучение. Имея базовое представление о мерах предосторожности и методах применения, можно легко начать использовать эфирные масла.</p>
+              <a href="#" class="btn card-btn">Читать дальше</a>
+              </div>
+          </div>
+          <div class="card col-xl-4 col-md-6 col-12">
+              <img src="./img/сup.jpg" class="card-img-top" alt="cup">
+              <div class="card-body pl-pr-0">
+              <h5 class="card-title">Как вы используете эфирные масла?</h5>
+              <p class="card-text">Чтобы знать, как эффективно использовать эфирные масла, не требуется химическая степень или серьезное обучение. Имея базовое представление о мерах предосторожности и методах применения, можно легко начать использовать эфирные масла.</p>
+              <a href="#" class="btn card-btn">Читать дальше</a>
+              </div>
+          </div>
+          <div class="card col-xl-4 col-md-6 col-12">
+              <img src="./img/oil.jpg" class="card-img-top" alt="oil">
+              <div class="card-body pl-pr-0">
+              <h5 class="card-title">Как вы используете эфирные масла?</h5>
+              <p class="card-text">Чтобы знать, как эффективно использовать эфирные масла, не требуется химическая степень или серьезное обучение. Имея базовое представление о мерах предосторожности и методах применения, можно легко начать использовать эфирные масла.</p>
+              <a href="#" class="btn card-btn">Читать дальше</a>
+              </div>
+          </div>
+          <div class="card col-xl-4 col-md-6 col-12">
+              <img src="./img/child.svg" class="card-img-top" alt="child">
+              <div class="card-body pl-pr-0">
+              <h5 class="card-title">Начните с эфирных масел</h5>
+              <p class="card-text">Чтобы знать, как эффективно использовать эфирные масла, не требуется химическая степень или серьезное обучение. Имея базовое представление о мерах предосторожности и методах применения, можно легко начать использовать эфирные масла.</p>
+              <a href="#" class="btn card-btn">Читать дальше</a>
+              </div>
+          </div>
+        </div>
+        <div class="modal" tabindex="-1">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title">Modal title</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                <p>Modal body text goes here.</p>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div id="carouselExampleControlsNoTouching" class="carousel slide" data-bs-touch="false" data-bs-interval="false">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <div class="row">
                 <div class="card col-xl-4 col-md-6 col-12 ">
                     <img src="./img/oil.jpg" class="card-img-top" alt="oil">
                     <div class="card-body pl-pr-0">
@@ -42,15 +112,11 @@
                     <a href="#" class="btn card-btn">Читать дальше</a>
                     </div>
                 </div>
-                <div class="card col-xl-4 col-md-6 col-12">
-                    <img src="./img/сup.jpg" class="card-img-top" alt="cup">
-                    <div class="card-body pl-pr-0">
-                    <h5 class="card-title">Как вы используете эфирные масла?</h5>
-                    <p class="card-text">Чтобы знать, как эффективно использовать эфирные масла, не требуется химическая степень или серьезное обучение. Имея базовое представление о мерах предосторожности и методах применения, можно легко начать использовать эфирные масла.</p>
-                    <a href="#" class="btn card-btn">Читать дальше</a>
-                    </div>
-                </div>
-                <div class="card col-xl-4 col-md-6 col-12">
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="row">
+                <div class="card col-xl-4 col-md-6 col-12 ">
                     <img src="./img/oil.jpg" class="card-img-top" alt="oil">
                     <div class="card-body pl-pr-0">
                     <h5 class="card-title">Как вы используете эфирные масла?</h5>
@@ -59,32 +125,62 @@
                     </div>
                 </div>
                 <div class="card col-xl-4 col-md-6 col-12">
-                    <img src="./img/child.svg" class="card-img-top" alt="child">
+                    <img src="img/child.svg" class="card-img-top" alt="oil">
                     <div class="card-body pl-pr-0">
                     <h5 class="card-title">Начните с эфирных масел</h5>
                     <p class="card-text">Чтобы знать, как эффективно использовать эфирные масла, не требуется химическая степень или серьезное обучение. Имея базовое представление о мерах предосторожности и методах применения, можно легко начать использовать эфирные масла.</p>
                     <a href="#" class="btn card-btn">Читать дальше</a>
                     </div>
                 </div>
+                <div class="card col-xl-4 col-md-6 col-12">
+                    <img src="./img/сup.jpg" class="card-img-top" alt="child">
+                    <div class="card-body pl-pr-0">
+                    <h5 class="card-title">Как вы используете эфирные масла?</h5>
+                    <p class="card-text">Чтобы знать, как эффективно использовать эфирные масла, не требуется химическая степень или серьезное обучение. Имея базовое представление о мерах предосторожности и методах применения, можно легко начать использовать эфирные масла.</p>
+                    <a href="#" class="btn card-btn">Читать дальше</a>
+                    </div>
+                </div>
+              </div>
             </div>
-        </div>
-        <div class="modal" tabindex="-1">
-            <div class="modal-dialog">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <h5 class="modal-title">Modal title</h5>
-                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            <div class="carousel-item">
+              <div class="row">
+                <div class="card col-xl-4 col-md-6 col-12 ">
+                    <img src="./img/oil.jpg" class="card-img-top" alt="oil">
+                    <div class="card-body pl-pr-0">
+                    <h5 class="card-title">Как вы используете эфирные масла?</h5>
+                    <p class="card-text">Чтобы знать, как эффективно использовать эфирные масла, не требуется химическая степень или серьезное обучение. Имея базовое представление о мерах предосторожности и методах применения, можно легко начать использовать эфирные масла.</p>
+                    <a href="#" class="btn card-btn">Читать дальше</a>
+                    </div>
                 </div>
-                <div class="modal-body">
-                  <p>Modal body text goes here.</p>
+                <div class="card col-xl-4 col-md-6 col-12">
+                    <img src="img/child.svg" class="card-img-top" alt="oil">
+                    <div class="card-body pl-pr-0">
+                    <h5 class="card-title">Начните с эфирных масел</h5>
+                    <p class="card-text">Чтобы знать, как эффективно использовать эфирные масла, не требуется химическая степень или серьезное обучение. Имея базовое представление о мерах предосторожности и методах применения, можно легко начать использовать эфирные масла.</p>
+                    <a href="#" class="btn card-btn">Читать дальше</a>
+                    </div>
                 </div>
-                <div class="modal-footer">
-                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                  <button type="button" class="btn btn-primary">Save changes</button>
+                <div class="card col-xl-4 col-md-6 col-12">
+                    <img src="./img/сup.jpg" class="card-img-top" alt="child">
+                    <div class="card-body pl-pr-0">
+                    <h5 class="card-title">Как вы используете эфирные масла?</h5>
+                    <p class="card-text">Чтобы знать, как эффективно использовать эфирные масла, не требуется химическая степень или серьезное обучение. Имея базовое представление о мерах предосторожности и методах применения, можно легко начать использовать эфирные масла.</p>
+                    <a href="#" class="btn card-btn">Читать дальше</a>
+                    </div>
                 </div>
               </div>
             </div>
           </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </div>
    </main>
    <footer>
     <div class="footer">
