--- a/less1-2/contacts.html
+++ b/less1-2/contacts.html
@@ -44,36 +44,44 @@
     <main>
         <div class="container">
             <h2 class="h2 line top">Контакты</h2>
-            <div class="row">
+            <div class="row map-h">
                 <div class="card col-xl-4 col-md-6 col-12">
-                    <div class="card-body">
-                        <div class="row form-background">
-                           <div class="col- circle d-flex justify-content-center align-items-center">
-                               <img src="./img/location.svg" width="26" height="26" alt="location">
+                    <div class="card-body padd-no">
+                        <div class="row form-background h-100 contact">
+                           <div class="col-3">
+                               <div class="circle d-flex justify-content-center align-items-center">
+                                    <img src="./img/location.svg" width="26" height="26" alt="location">
+                               </div>
+                               
                            </div>
                            <div class="col-9">
                                 <h5>Наш адрес</h5>
                                 <p>Christmas Eve and New Year's Eve 9:00 am - 12:00 pm MT</p> 
                            </div>
-                           <div class="col- circle d-flex justify-content-center align-items-center">
-                                <img src="./img/phone-call.svg" width="26" height="26" alt="phone">
+                           <div class="col-3">
+                               <div class="circle d-flex justify-content-center align-items-center">
+                                   <img src="./img/phone-call.svg" width="26" height="26" alt="phone">
+                               </div>
                            </div>
                            <div class="col-9 d-flex flex-column ">
                                 <h5>Позвоните нам</h5>
                                 <a href="tel:+(495) 263 19 44">(495) 263 19 44</a>
                                 <a href="tel:+(495) 263 19 44">(495) 263 19 44</a>    
                            </div>
-                           <div class="col- circle d-flex justify-content-center align-items-center">
-                               <img src="./img/mail.svg" width="26" height="26" alt="mail">
+                           <div class="col-3">
+                               <div class="circle d-flex justify-content-center align-items-center">
+                                    <img src="./img/mail.svg" width="26" height="26" alt="mail">
+                               </div>
                            </div>
                            <div class="col-9">
                                <h5>Напишите нам</h5>
                                 <a href="mailto:terrahealth@terra.com">terrahealth@terra.com</a>
                            </div>
+                           <button class="btn form__submit btn-contact">Заказать консультацию</button>
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-8 col-md-6 col-12">
+                <div class="col-xl-8 col-md-6 col-12 h-100">
                     <iframe  class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26161.08210169127!2d30.70101872875728!3d46.43195131017954!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40c6337522de4913%3A0x908a819813d3d94a!2z0JvRjtGB0YLQtNC-0YDRhNGB0LrQsNGPINC00L7RgC4sIDkwLCDQntC00LXRgdGB0LAsINCe0LTQtdGB0YHQutCw0Y8g0L7QsdC70LDRgdGC0YwsIDY1MDAw!5e0!3m2!1sru!2sua!4v1627577739421!5m2!1sru!2sua" width="600" height="450" allowfullscreen="" loading="lazy"></iframe>
                 </div>
             </div>
