--- a/less3/index.html
+++ b/less3/index.html
@@ -17,13 +17,13 @@
         <header class="background-white shadow-sm p-3 position-relative">
             <div class="container wrapper">
                 <div class="row">
-                    <div class="col-2  d-flex align-items-center">
+                    <div class="col-md-2 col-6  d-flex align-items-center">
                         <a href="#">
                             <img src="./img/logo.svg" width="77" height="77" alt="logo">
                         </a>
                     </div>
                     <!-- col- col-sm- col-md- col-lg- -->
-                    <div class="col-xl-7  d-flex align-items-center position-relative">
+                    <div class="col-md-7 col-12  d-flex align-items-center position-relative input">
                         <img class="position-absolute position-adress" src="./img/adress.svg" width="22" height="22" alt="adress">
                         <input class="border border-2 rounded input-header" type="text" list="cityList" placeholder="Вкажіть Ваше місто..."/>
                         <datalist id="cityList">
@@ -47,7 +47,7 @@
                             <option value="Житомир" >
                         </datalist>
                     </div>
-                    <div class="col-xl-3  d-flex align-items-center justify-content-end">
+                    <div class="col-md-3 col-6  d-flex align-items-center justify-content-end">
                         <button class="btn btn__header btn__header-orange shadow-sm" type="button">Увійти</button>
                         <button class="btn btn__header btn__header-green shadow-sm" type="button">Кошик</button>
                     </div>
@@ -57,9 +57,65 @@
         <main>
             <div class="background-white shadow-sm p-3">
                 <div class="container wrapper">
-                    <h2>Макдональдз</h2>
+                    <h2 class="heading">Макдональдз</h2>
                 </div>
-                
+            </div>
+            <div class="container wrapper">
+                <div class="row">
+                    <div class="col-md-8 col-12">
+                        <div class="row">
+                            <ul class="col-12 nav nav-pills">
+                                <li class="nav-item">
+                                  <a class="nav-link active" aria-current="page" href="#">Active</a>
+                                </li>
+                                <li class="nav-item">
+                                  <a class="nav-link" href="#">Link</a>
+                                </li>
+                                <li class="nav-item">
+                                  <a class="nav-link" href="#">Link</a>
+                                </li>
+                                <li class="nav-item">
+                                  <a class="nav-link disabled">Disabled</a>
+                                </li>
+                            </ul>
+                            <div class="card col-12 col-lg-4 col-sm-6">
+                                <img src="./img/big-teisti.jpg" class="card-img-top" alt="big teisti">
+                                <div class="card-body">
+                                  <h5 class="card-title">Card title</h5>
+                                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                                </div>
+                            </div>
+                            <div class="card col-12 col-lg-4 col-sm-6">
+                                <img src="./img/roll.jpg" class="card-img-top" alt="roll">
+                                <div class="card-body">
+                                  <h5 class="card-title">Card title</h5>
+                                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                                </div>
+                            </div>
+                            <div class="card col-12 col-lg-4 col-sm-6">
+                                <img src="./img/big-mac-menu.jpg" class="card-img-top" alt="big mac menu">
+                                <div class="card-body">
+                                  <h5 class="card-title">Card title</h5>
+                                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-12">
+                        <div class="card w-100">
+                            <img src="./img/burger.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title">Card title</h5>
+                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                              <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                          </div>
+                    </div>
+                </div>
+
             </div>
 
         </main>
