--- a/less3/index.html
+++ b/less3/index.html
@@ -60,62 +60,92 @@
                     <h2 class="heading">Макдональдз</h2>
                 </div>
             </div>
-            <div class="container wrapper">
-                <div class="row">
-                    <div class="col-md-8 col-12">
-                        <div class="row">
-                            <ul class="col-12 nav nav-pills">
-                                <li class="nav-item">
-                                  <a class="nav-link active" aria-current="page" href="#">Active</a>
+            <div class="main-background">
+                <div class="container wrapper">
+                    <div class="row">
+                        <div class="col-md-8 col-12">
+                            <ul class="col-12 nav nav-pills mt-4">
+                                <li class="nav-item d-flex  align-items-center">
+                                    <a class="nav-link" aria-current="page" href="#">Акції</a>
                                 </li>
-                                <li class="nav-item">
-                                  <a class="nav-link" href="#">Link</a>
+                                <li class="nav-item d-flex  align-items-center">
+                                    <a class="nav-link active-link" href="#">Бургери</a>
                                 </li>
-                                <li class="nav-item">
-                                  <a class="nav-link" href="#">Link</a>
+                                <li class="nav-item d-flex  align-items-center">
+                                    <a class="nav-link" href="#">Курка</a>
                                 </li>
-                                <li class="nav-item">
-                                  <a class="nav-link disabled">Disabled</a>
+                                <li class="nav-item d-flex  align-items-center">
+                                    <a class="nav-link" href="#">Десерти</a>
+                                </li>
+                                <li class="nav-item d-flex  align-items-center">
+                                    <a class="nav-link" href="#">Напої</a>
+                                </li>
+                                <li class="nav-item d-flex  align-items-center">
+                                    <a class="nav-link" href="#">Соуси</a>
                                 </li>
                             </ul>
-                            <div class="card col-12 col-lg-4 col-sm-6">
-                                <img src="./img/big-teisti.jpg" class="card-img-top" alt="big teisti">
-                                <div class="card-body">
-                                  <h5 class="card-title">Card title</h5>
-                                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <h2 class="subsection">Акції</h2>
+                            <div class="row">
+                                <div class="col-12 col-lg-4 col-sm-6">
+                                    <div class="card-active card-height card shadow-card p-0">
+                                        <img src="./img/big-teisti.jpg" class="card-img-top" alt="big teisti">
+                                        <div class="card-body d-flex flex-column justify-content-between">
+                                            <h5 class="card-title">Біг Тейсті</h5>
+                                            <p class="card-text">Сендвіч с великим, рубленим біфштексом</p>
+                                            <div class="d-flex align-items-center justify-content-between">
+                                                <a href="#" class="add-cart">80 грн.</a>
+                                                <a href="#">
+                                                    <img class="heart" src="./img/heart-border.svg" width="24" height="24" alt="heart">
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-12 col-lg-4 col-sm-6">
+                                    <div class="card-active card-height card shadow-card p-0">
+                                        <img src="./img/roll.jpg" class="card-img-top" alt="roll">
+                                        <div class="card-body d-flex flex-column justify-content-between">
+                                            <h5 class="card-title">Ролли</h5>
+                                            <p class="card-text">Свіжі ролли, 3 штуки. Закручений зі смаком!</p>
+                                            <div class="d-flex align-items-center justify-content-between">
+                                                <a href="#" class="add-cart">110 грн.</a>
+                                                <a href="#">
+                                                    <img class="heart" src="./img/heart-border.svg" width="24" height="24" alt="heart">
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-12 col-lg-4 col-sm-6">
+                                    <div class="card-active card-height card shadow-card p-0">
+                                        <img src="./img/big-mac-menu.jpg" class="card-img-top" alt="big mac menu">
+                                        <div class="card-body d-flex flex-column justify-content-between">
+                                            <h5 class="card-title">Біг Мак меню</h5>
+                                            <p class="card-text">Біг мак, середня картопля, кола</p>
+                                            <div class="d-flex align-items-center justify-content-between">
+                                                <a href="#" class="add-cart">120 грн.</a>
+                                                <a href="#">
+                                                    <img class="heart" src="./img/heart-border.svg" width="24" height="24" alt="heart">
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
-                            <div class="card col-12 col-lg-4 col-sm-6">
-                                <img src="./img/roll.jpg" class="card-img-top" alt="roll">
+                        </div>
+                        <div class="col-md-4 col-12">
+                            <div class="card w-100">
+                                <img src="./img/burger.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                  <h5 class="card-title">Card title</h5>
-                                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                  <a href="#" class="btn btn-primary">Go somewhere</a>
-                                </div>
-                            </div>
-                            <div class="card col-12 col-lg-4 col-sm-6">
-                                <img src="./img/big-mac-menu.jpg" class="card-img-top" alt="big mac menu">
-                                <div class="card-body">
-                                  <h5 class="card-title">Card title</h5>
-                                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                <a href="#" class="btn btn-primary">Go somewhere</a>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4 col-12">
-                        <div class="card w-100">
-                            <img src="./img/burger.jpg" class="card-img-top" alt="...">
-                            <div class="card-body">
-                              <h5 class="card-title">Card title</h5>
-                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                              <a href="#" class="btn btn-primary">Go somewhere</a>
-                            </div>
-                          </div>
-                    </div>
-                </div>
 
+                </div>
             </div>
 
         </main>
