--- a/less3/index.html
+++ b/less3/index.html
@@ -14,53 +14,52 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
     <body>
-        <header class="background-white shadow-sm p-3 position-relative">
-            <div class="container wrapper">
-                <div class="row">
-                    <div class="col-md-2 col-6  d-flex align-items-center">
-                        <a href="#">
-                            <img src="./img/logo.svg" width="77" height="77" alt="logo">
-                        </a>
-                    </div>
-                    <!-- col- col-sm- col-md- col-lg- -->
-                    <div class="col-md-7 col-12  d-flex align-items-center position-relative input">
-                        <img class="position-absolute position-adress" src="./img/adress.svg" width="22" height="22" alt="adress">
-                        <input class="border border-2 rounded input-header" type="text" list="cityList" placeholder="Вкажіть Ваше місто..."/>
-                        <datalist id="cityList">
-                            <option value="Київ" >
-                            <option value="Харків" >
-                            <option value="Одеса" >
-                            <option value="Дніпро" >
-                            <option value="Донецьк" >
-                            <option value="Запоріжжя" >
-                            <option value="Львів" >
-                            <option value="Кривий Ріг" >
-                            <option value="Миколаїв" >
-                            <option value="Маріуполь" >
-                            <option value="Луганськ" >
-                            <option value="Вінниця" >
-                            <option value="Макіївка" >
-                            <option value="Херсон" >
-                            <option value="Полтава" >
-                            <option value="Чернігів" >
-                            <option value="Черкаси" >
-                            <option value="Житомир" >
-                        </datalist>
-                    </div>
-                    <div class="col-md-3 col-6  d-flex align-items-center justify-content-end">
-                        <button class="btn btn__header btn__header-orange shadow-sm" type="button">Увійти</button>
-                        <button class="btn btn__header btn__header-green shadow-sm" type="button">Кошик</button>
-                    </div>
-                </div>
-            </div>
-        </header>
-        <main>
-            <div class="background-white shadow-sm p-3">
+        <div class="content">
+            <header class="background-white shadow-sm p-3 position-relative">
                 <div class="container wrapper">
-                    <h2 class="heading">Макдональдз</h2>
+                    <div class="row">
+                        <div class="col-md-2 col-6  d-flex align-items-center">
+                            <a href="#">
+                                <img src="./img/logo.svg" width="77" height="77" alt="logo">
+                            </a>
+                        </div>
+                        <div class="col-md-7 col-12  d-flex align-items-center position-relative input">
+                            <img class="position-absolute position-adress" src="./img/adress.svg" width="22" height="22" alt="adress">
+                            <input class="border border-2 rounded input-header" type="text" list="cityList" placeholder="Вкажіть Ваше місто..."/>
+                            <datalist id="cityList">
+                                <option value="Київ" >
+                                <option value="Харків" >
+                                <option value="Одеса" >
+                                <option value="Дніпро" >
+                                <option value="Донецьк" >
+                                <option value="Запоріжжя" >
+                                <option value="Львів" >
+                                <option value="Кривий Ріг" >
+                                <option value="Миколаїв" >
+                                <option value="Маріуполь" >
+                                <option value="Луганськ" >
+                                <option value="Вінниця" >
+                                <option value="Макіївка" >
+                                <option value="Херсон" >
+                                <option value="Полтава" >
+                                <option value="Чернігів" >
+                                <option value="Черкаси" >
+                                <option value="Житомир" >
+                            </datalist>
+                        </div>
+                        <div class="col-md-3 col-6  d-flex align-items-center justify-content-end">
+                            <button class="btn btn__header btn__header-orange shadow-sm" type="button">Увійти</button>
+                            <button class="btn btn__header btn__header-green shadow-sm" type="button">Кошик</button>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="main-background">
+            </header>
+            <main>
+                <div class="background-white shadow-sm p-3">
+                    <div class="container wrapper">
+                        <h2 class="heading">Макдональдз</h2>
+                    </div>
+                </div>
                 <div class="container wrapper">
                     <div class="row">
                         <div class="col-md-8 col-12">
@@ -86,14 +85,15 @@
                             </ul>
                             <h2 class="subsection">Акції</h2>
                             <div class="row">
-                                <div class="col-12 col-lg-4 col-sm-6">
+                                <div class="col-12 col-lg-4 col-sm-6 mb-4">
                                     <div class="card-active card-height card shadow-card p-0">
                                         <img src="./img/big-teisti.jpg" class="card-img-top" alt="big teisti">
                                         <div class="card-body d-flex flex-column justify-content-between">
                                             <h5 class="card-title">Біг Тейсті</h5>
                                             <p class="card-text">Сендвіч с великим, рубленим біфштексом</p>
                                             <div class="d-flex align-items-center justify-content-between">
-                                                <a href="#" class="add-cart">80 грн.</a>
+                                                <a href="#" class="price">80 грн.</a>
+                                                <a class="add-cart" href="#">В корзину</a>
                                                 <a href="#">
                                                     <img class="heart" src="./img/heart-border.svg" width="24" height="24" alt="heart">
                                                 </a>
@@ -101,14 +101,15 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-12 col-lg-4 col-sm-6">
+                                <div class="col-12 col-lg-4 col-sm-6 mb-4">
                                     <div class="card-active card-height card shadow-card p-0">
                                         <img src="./img/roll.jpg" class="card-img-top" alt="roll">
                                         <div class="card-body d-flex flex-column justify-content-between">
                                             <h5 class="card-title">Ролли</h5>
                                             <p class="card-text">Свіжі ролли, 3 штуки. Закручений зі смаком!</p>
                                             <div class="d-flex align-items-center justify-content-between">
-                                                <a href="#" class="add-cart">110 грн.</a>
+                                                <a href="#" class="price">110 грн.</a>
+                                                <a class="add-cart" href="#">В корзину</a>
                                                 <a href="#">
                                                     <img class="heart" src="./img/heart-border.svg" width="24" height="24" alt="heart">
                                                 </a>
@@ -116,14 +117,15 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-12 col-lg-4 col-sm-6">
+                                <div class="col-12 col-lg-4 col-sm-6 mb-4">
                                     <div class="card-active card-height card shadow-card p-0">
                                         <img src="./img/big-mac-menu.jpg" class="card-img-top" alt="big mac menu">
                                         <div class="card-body d-flex flex-column justify-content-between">
                                             <h5 class="card-title">Біг Мак меню</h5>
                                             <p class="card-text">Біг мак, середня картопля, кола</p>
                                             <div class="d-flex align-items-center justify-content-between">
-                                                <a href="#" class="add-cart">120 грн.</a>
+                                                <a href="#" class="price">120 грн.</a>
+                                                <a class="add-cart" href="#">В корзину</a>
                                                 <a href="#">
                                                     <img class="heart" src="./img/heart-border.svg" width="24" height="24" alt="heart">
                                                 </a>
@@ -133,24 +135,87 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-4 col-12">
-                            <div class="card w-100">
-                                <img src="./img/burger.jpg" class="card-img-top" alt="...">
-                                <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <div class="col-md-4 col-12 order-list">
+                            <div class="card w-100 mt-5">
+                                <div class="px-3 py-4">
+                                    <div class="px-3 mx-3 mb-1 pb-4">
+                                        <div class="mb-1 pb-4">Ваше замовлення:</div>
+                                        <table class="table m-0">
+                                            <tbody>
+                                                <tr>
+                                                    <td class="border-0">
+                                                        <h5 class="text-table">Біг Мак меню</h5>
+                                                        <ul class="list-unstyled list-text">
+                                                            <li>Картопля фрі</li>
+                                                            <li>Біг Мак</li>
+                                                            <li>Кола</li>
+                                                        </ul>
+                                                    </td>
+                                                    <td class="align-top border-0">
+                                                        <button class="rounded-circle circle-btn border-0">+</button>
+                                                        <span  class="px-2">1</span>
+                                                        <button class="rounded-circle circle-btn border-0">-</button>
+                                                    </td>
+                                                    <td class="align-top text-table border-0">120 ₴ </td>
+                                                </tr>
+                                                <tr>
+                                                    <td class="border-0">Доставка</td>
+                                                    <td class="border-0">50 ₴ </td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                    <button class="shadow-card btn__header order d-flex align-items-center justify-content-between">
+                                        <span>Замовити</span>
+                                        <span>410 ₴</span>
+                                    </button>
                                 </div>
                             </div>
                         </div>
                     </div>
 
                 </div>
+                <!-- Button trigger modal -->
+  
+  <!-- Modal -->
+            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                    ...
+                    </div>
+                    <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                    </div>
+                </div>
+                </div>
             </div>
+                
 
-        </main>
-        <footer></footer>
+            </main>
+            <footer class="footer">
+                <div class="container wrapper">
+                    <div class="row">
+                        <ul class="footer-manu col-12 col-md-6 list-unstyled d-flex my-4 py-2">
+                            <li class="footer-list"><a class="text-decoration-none" href="#">Про нас</a></li>
+                            <li class="footer-list"><a class="text-decoration-none" href="#">Контакти</a></li>
+                            <li class="footer-list"><a class="text-decoration-none" href="#">Партнери</a></li>
+                        </ul>
+                        <ul class="footer-manu col-12 col-md-6 list-unstyled d-flex justify-content-end  my-4 py-2">
+                            <li class="footer-social"><a href="#"><img src="./img/telegramm.svg" alt="telegramm" width="40" height="40"></a></li>
+                            <li class="footer-social"><a href="#"><img src="./img/facebook.svg" alt="facebook" width="40" height="40"></a></li>
+                            <li class="footer-social"><a href="#"><img src="./img/instagramm.svg" alt="instagramm" width="40" height="40"></a></li>
+                        </ul>
+                    </div>
+                </div>
 
+            </footer>
+        </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     </body>
 </html>
