--- a/less3/index.html
+++ b/less3/index.html
@@ -112,16 +112,16 @@
                                     <table class="table m-0">
                                         <tbody id="tableOrder">
                                             <tr>
-                                                <td class="border-0">
+                                                <!-- <td class="border-0">
                                                     <h5 class="text-table">Біг Мак меню</h5>
-                                                    <!-- 
+                                                    
                                                     <ul class="list-unstyled list-text">
                                                         <li>Картопля фрі</li>
                                                         <li>Біг Мак</li>
                                                         <li>Кола</li>
                                                     </ul> 
-                                                    -->
-                                                </td>
+                                                   
+                                                </td> -->
                                                 <td class="align-top border-0">
                                                     <button class="rounded-circle circle-btn border-0">+</button>
                                                     <span  class="px-2">1</span>
@@ -136,9 +136,9 @@
                                         </tbody>
                                     </table>
                                 </div>
-                                <button class="shadow-card btn__header order d-flex align-items-center justify-content-between">
+                                <button id="orderBtn" class="shadow-card btn__header order d-flex align-items-center justify-content-between">
                                     <span>Замовити</span>
-                                    <span>410 ₴</span>
+                                    <span id="orderPrice">410 ₴</span>
                                 </button>
                             </div>
                         </div>
