--- a/less11/my-app/public/index.html
+++ b/less11/my-app/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Calc</title>
     <meta charset='UTF-8'/>
     <link rel="stylesheet" href="css/styles.css"/>
     <script src="./src/index.js"></script>
